--- a/sensora-ui/src/i18n/locales/de-DE.json
+++ b/sensora-ui/src/i18n/locales/de-DE.json
@@ -23,7 +23,7 @@
     "ThemeDescription": "Wählen Sie das Thema für die App.",
     "Light": "Hell",
     "Dark": "Dunkel",
-    "OSPreference": "Betriebssystem",
+    "OSPreference": "Gerät",
     "SetToOS": "Erscheinungsbild auf Betriebssystem-Voreinstellung gesetzt",
     "SwitchToDarkMode": "Erscheinungsbild auf Dunkelmodus umgeschaltet",
     "SwitchToLightMode": "Erscheinungsbild auf Hellmodus umgeschaltet",
