update toast middleware for axios requests

--- a/sensora-ui/src/i18n/locales/de-DE.json
+++ b/sensora-ui/src/i18n/locales/de-DE.json
@@ -49,7 +49,27 @@
     "serverError": "Interner Serverfehler! Bitte später versuchen.",
     "unknownError": "Unbekannter Fehler!",
     "networkError": "Netzwerkfehler! Bitte Internetverbindung prüfen.",
-    "loading": "Lädt..."
+    "loading": "Lädt...",
+    "requestCompleted": "Erfolgreich",
+    "E000": "Die Abfrage konnte nicht geparst werden.",
+    "E100": "Autorisierungsheader erforderlich: Verwenden Sie 'Authorization: Bearer <token>'.",
+    "E101": "Autorisierungsheader konnte nicht geparst werden: Überprüfen Sie die Kodierung.",
+    "E102": "Der Autorisierungsheader muss vom Typ Bearer sein.",
+    "E103": "Das Token ist abgelaufen oder ungültig. Bitte erneut anmelden.",
+    "E104": "Ihre E-Mail-Adresse wurde noch nicht bestätigt. Überprüfen Sie Ihre E-Mails.",
+    "E200": "Die Anfrage entspricht nicht dem erforderlichen Format. Überprüfen Sie die Dokumentation.",
+    "E201": "Benutzer mit diesem Benutzernamen nicht gefunden. Überprüfen Sie die Schreibweise.",
+    "E202": "Benutzer mit dieser E-Mail nicht gefunden. Überprüfen Sie die Schreibweise.",
+    "E204": "Das Passwort ist falsch. Überprüfen Sie die Schreibweise.",
+    "E205": "Der Benutzer konnte nicht gespeichert werden. Benutzername oder E-Mail bereits vergeben.",
+    "E300": "Die ID ist falsch. Die Ressource existiert möglicherweise nicht mehr.",
+    "E301": "Sie haben keine Berechtigung, auf diesen Benutzer zuzugreifen.",
+    "E400": "Gruppe konnte nicht gespeichert werden. Kontaktieren Sie den Administrator.",
+    "E405": "Die Gruppe existiert nicht. Überprüfen Sie die Schreibweise.",
+    "E406": "Der Einladungstoken ist abgelaufen oder ungültig.",
+    "E500": "Der Raum existiert nicht. Überprüfen Sie die Schreibweise.",
+    "E601": "Die Pflanzen-ID im Pfad ist erforderlich. Überprüfen Sie die Dokumentation.",
+    "E603": "Sie haben keine Berechtigung für diese Aktion. Fragen Sie ein Gruppenmitglied oder den Raum-Eigentümer."
   },
   "group": {
     "deleted": "Gruppe erfolgreich gelöscht",
