--- a/sensora-ui/src/i18n/locales/en-US.json
+++ b/sensora-ui/src/i18n/locales/en-US.json
@@ -49,7 +49,27 @@
     "serverError": "Internal server error! Please try again later.",
     "unknownError": "Unknown error!",
     "networkError": "Network error! Please check your internet connection.",
-    "loading": "Loading..."
+    "loading": "Loading...",
+    "requestCompleted": "Successful",
+    "E000": "Unable to parse query.",
+    "E100": "Authorization header required: use 'Authorization: Bearer <token>'.",
+    "E101": "Unable to parse authorization header string: check encoding.",
+    "E102": "Authorization header must be of type Bearer.",
+    "E103": "The token has expired or is invalid. Log in again.",
+    "E104": "Your email address is not yet validated. Check your emails.",
+    "E200": "Request does not match the required format. Check the documentation for more information.",
+    "E201": "Unable to find user by its username. Check spelling.",
+    "E202": "Unable to find user by its mail. Check spelling.",
+    "E204": "Password is incorrect. Check spelling.",
+    "E205": "Unable to save user. Username or mail already in use.",
+    "E300": "ID is incorrect. The resource may no longer exist.",
+    "E301": "You do not have permission to access this user.",
+    "E400": "Unable to save group. Contact admin for more information.",
+    "E405": "The group does not exist. Check your spelling.",
+    "E406": "The invitation token has expired or is incorrect.",
+    "E500": "The room does not exist. Check your spelling.",
+    "E601": "The plant ID in the path is required. Check the documentation.",
+    "E603": "You don't have permission to do this. Ask a group member or the room owner."
   },
   "group": {
     "deleted": "Group successfully deleted",
