add login after registration

--- a/sensora-ui/src/i18n/locales/en-US.json
+++ b/sensora-ui/src/i18n/locales/en-US.json
@@ -82,5 +82,9 @@
   "user": {
     "updated": "User successfully updated!",
     "deleted": "User successfully deleted!"
+  },
+  "register": {
+    "SpecialCharRequired": "The password must contain at least one special character (!\"#$%&'()*+,-./:;<=>?[]^_{}|~).",
+    "MinLength": "The password must be at least 8 characters long."
   }
 }
