--- a/sensora-ui/src/i18n/locales/de-DE.json
+++ b/sensora-ui/src/i18n/locales/de-DE.json
@@ -82,5 +82,9 @@
   "user": {
     "updated": "Benutzer erfolgreich aktualisiert!",
     "deleted": "Benutzer erfolgreich gelöscht!"
+  },
+  "register": {
+    "SpecialCharRequired": "Das Passwort muss mindestens ein Sonderzeichen enthalten (!\"#$%&'()*+,-./:;<=>?[]^_{}|~).",
+    "MinLength": "Das Passwort muss mindestens 8 Zeichen lang sein."
   }
 }
