--- a/sensora-ui/src/i18n/locales/de-DE.json
+++ b/sensora-ui/src/i18n/locales/de-DE.json
@@ -87,5 +87,23 @@
   "register": {
     "SpecialCharRequired": "Das Passwort muss mindestens ein Sonderzeichen enthalten (!\"#$%&'()*+,-./:;<=>?[]^_{}|~).",
     "MinLength": "Das Passwort muss mindestens 8 Zeichen lang sein."
+  },
+  "setupAccountStepper": {
+    "1": {
+      "title": "Kontoerstellung",
+      "description": "Richten Sie Ihr Konto ein, um zu starten"
+    },
+    "2": {
+      "title": "Persönliche Informationen",
+      "description": "Geben Sie Ihren Vornamen und Nachnamen ein"
+    },
+    "3": {
+      "title": "Profilbild",
+      "description": "Wählen Sie ein Profilbild, das Sie repräsentiert"
+    },
+    "4": {
+      "title": "Erstelle Wohnung",
+      "description": "Beginnen Sie mit der Erstellung Ihrer Wohnung und dem Einrichten Ihres Raums"
+    }
   }
 }
